--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "ky": "^0.28.7",
+    "mongoose": "^6.1.8",
     "next": "12.0.8",
+    "next-seo": "^4.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.0"
