--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^6.1.8",
     "next": "12.0.8",
     "next-seo": "^4.29.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.0"
