--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "8.7.0",
