Add support for new access token

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-google-recaptcha-v3": "^1.9.7",
     "sass": "^1.49.0",
     "swr": "^1.2.2",
-    "ws": "^8.5.0"
+    "ws": "^8.5.0",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "eslint": "8.7.0",
